chg: [update introduction] add ocr + qrcodes + barcodes

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -628,6 +628,40 @@
     }
 \end{frame}
 
+\begin{frame}[fragile]{OCR: Optical Character Recognition}
+    \begin{columns}[T,onlytextwidth]
+        \column{0.45\textwidth}
+            \centering
+            \includegraphics[width=\linewidth]{screenshot/ocr-1.png}
+        \column{0.55\textwidth}
+            \begin{itemize}
+                \item Threat actors are often verbose and frequently {\bf share extensive details in private channels}.
+                \item Many messages contain screenshots and images.
+                \item Text detection and extraction are performed across 80+ languages using a CRNN (Convolutional Recurrent Neural Network).
+                \item {\bf Enables keyword-based matching and detection}.
+            \end{itemize}
+    \end{columns}
+\end{frame}
+
+\begin{frame}
+    \frametitle{QR Code Extractor}
+    \begin{center}
+        \includegraphics[scale=0.27]{images/qr_decoder.png}
+    \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{QR Codes}
+    \begin{center}
+        \includegraphics[scale=0.235]{screenshot/qr-pay.png}
+    \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{Bar Codes}
+    \begin{center}
+        \includegraphics[scale=0.22]{screenshot/barcode.png}
+    \end{center}
+\end{frame}
+
 \begin{frame}
     \frametitle{Collection - Lacus Crawler}
     \centerline{
