chg: [short intro] add search screenshot

--- a/3-ail-short-introduction/ail-training.tex
+++ b/3-ail-short-introduction/ail-training.tex
@@ -320,6 +320,13 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Search}
+    \begin{figure}
+        \includegraphics[scale=0.18, angle=0]{screenshot/search.png}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
     \frametitle{YARA Tracker}
         \begin{figure}
             \includegraphics[scale=0.22]{screenshot/tracker_yara.png}
