chg: [training] ail-training updated

--- a/3-ail-short-introduction/ail-training.tex
+++ b/3-ail-short-introduction/ail-training.tex
@@ -385,9 +385,9 @@
     \frametitle{Ongoing Developments}
     \begin{itemize}
         \item \textbf{Advanced video processing and extraction}
-        \item Improve Search
         \item \textbf{MISP export with new correlation types}
         \item \textbf{Automatic geolocation}
+	\item \textbf{Lacus improvement including proxy selection, local cache and cookies state transfer}
         \item \textbf{Bloom Filter for Private Search Set (PSS) Filtering}
     \end{itemize}
     \begin{center}
