--- a/3-ail-short-introduction/presentation.tex
+++ b/3-ail-short-introduction/presentation.tex
@@ -87,6 +87,14 @@
     \end{center}
 \end{frame}
 
+
+\begin{frame}
+    \frametitle{Analysis of unstructured information}
+    \begin{center}
+        \includegraphics[scale=0.225]{images/ail-internal.png}
+    \end{center}
+\end{frame}
+
 \begin{frame}
     \frametitle{{\it Collection} - automate crawling}
 
