--- a/3-ail-short-introduction/presentation.tex
+++ b/3-ail-short-introduction/presentation.tex
@@ -128,6 +128,26 @@
     }
 \end{frame}
 
+\begin{frame}
+    \frametitle{Onion Lookup - onion.ail-project.org}
+
+    \begin{itemize}
+        \item \url{https://onion.ail-project.org} is a public search engine powered by AIL.
+        \item Check if a Tor hidden service exists and retrieve its associated metadata.
+        \item Can be used to filter onion domains related to CSAM and other violent content.
+    \end{itemize}
+
+    \begin{center}
+        \includegraphics[scale=0.26]{images/onion-lookup.png}
+    \end{center}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Crawler - Pre-Filtering }
+    \begin{center}
+        \includegraphics[scale=0.27]{images/ail-crawler-filter.png}
+    \end{center}
+\end{frame}
 
 \begin{frame}
     \frametitle{\textit{Collection} - Automate Collection}
@@ -183,6 +203,25 @@
 \begin{frame}[fragile]{Bar Codes}
     \begin{center}
         \includegraphics[scale=0.22]{screenshot/barcode.png}
+    \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{Images Descriptions}
+    \begin{itemize}
+        \item Uses \textbf{Ollama and Qwen2.5-VL} to automatically generate descriptions for screenshots and other images.
+    \end{itemize}
+    \begin{center}
+        \includegraphics[scale=0.25]{images/image-description-phone.png}
+    \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{Images Descriptions}
+    \begin{itemize}
+    	\item Helps users quickly understand image content without viewing the image directly.
+        \item Generated descriptions provide an extra layer of insight during analysis.
+    \end{itemize}
+    \begin{center}
+        \includegraphics[scale=0.32]{images/image-description-mount.png}
     \end{center}
 \end{frame}
 
