--- a/3-ail-short-introduction/presentation.tex
+++ b/3-ail-short-introduction/presentation.tex
@@ -208,7 +208,7 @@
 
 \begin{frame}[fragile]{Images Descriptions}
     \begin{itemize}
-        \item Uses \textbf{Ollama and Qwen2.5-VL} to automatically generate descriptions for screenshots and other images.
+        \item Uses \textbf{Ollama} and \textbf{Qwen2.5-VL} to automatically generate descriptions for screenshots and other images.
     \end{itemize}
     \begin{center}
         \includegraphics[scale=0.25]{images/image-description-phone.png}
@@ -341,8 +341,9 @@
 \begin{frame}
     \frametitle{Ongoing Developments}
     \begin{itemize}
-        \item \textbf{Mail Search – Next Release}
+        \item \textbf{Improved Mail Search – Next Release}
         \item \textbf{Lacus crawler improvements:} proxy selection, local cache, and cookie state transfer
+        \item \textbf{Distributed Image Description Processing} - Automatic load balancing and per-domain classification across multiple Ollama servers
         \item \textbf{Translate search:} support for searching in other languages
         \item \textbf{Advanced video processing and extraction}
         \item \textbf{MISP export with new correlation types}
